# kiosk-control-panel

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
kiosk-app/js/: panel.js
plugins/pphue/: CMakeLists.txt
